--- a/Streamlit_multipage_app/.streamlit/config.toml
+++ b/Streamlit_multipage_app/.streamlit/config.toml
@@ -3,8 +3,8 @@
 primaryColor = "#d33682"
 
 #Bakground color for the main content area.
-#backgroundColor = "#002b36"
-backgroundColor = "#fff"
+backgroundColor = "#002b36"
+
 
 
 
